# chitin-engine-lib

./: .gitignore  LICENSE  README.md  pyproject.toml  setup_platform.py
.github/workflows/: build.yaml
chitin/: __init__.py  _engine.py  _ffi.py  _http.py  _resolve.py  _types.py  py.typed
tests/: __init__.py  test_engine_fallback.py  test_engine_http.py  test_types.py
