[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "chitin-engine-lib"
version = "0.1.2"
description = "Python bindings for the Chitin security engine"
requires-python = ">=3.11"
license = {text = "Apache-2.0"}
dependencies = []

[project.urls]
Repository = "https://github.com/datagoboom/chitin-engine-lib"

[tool.setuptools.packages.find]
include = ["chitin*"]
